// Copyright (c) Mysten Labs, Inc.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
import "google/protobuf/duration.proto";

package sui.rpc.v2beta;


message SleepRequest {
    google.protobuf.Duration timeout = 1;
}

message SleepResponse {
    string msg = 1;
}

service SleepService {
  rpc Sleep(SleepRequest) returns (SleepResponse);
}
